# QA-AGENTS

./: .cursorrules  .gitignore  .mcp.json  AGENTS.md  README.md  package-lock.json  package.json  pnpm-lock.yaml
.claude/: CLAUDE.md
.cursor/rules/: extract-test-words.mdc  onekey-qa-review.mdc  onekey-test-designer.mdc
docs/: AGENTS.md  SKILL.md  ios-appium-wda-real-device-setup.md  qa-rules.md  tutorial.md  visualization.html
docs/plans/: 2026-02-13-agent-architecture-redesign.md  2026-02-13-implementation-plan.md  2026-02-28-recorder-live-monitor-design.md  2026-02-28-recorder-live-monitor.md  2026-03-09-test-runner-dashboard-design.md  2026-03-09-test-runner-dashboard.md
docs/qa/: SKILL.md  app-monorepo-selector-integration.md  qa-rules.md
docs/requirements/: Perps-限价单最优价格BBO.md  Stellar (XLM) 新链文档.md
docs/rules/: borrow-defi-rules.md  perps-rules.md  swap-network-features.md  swap-rules.md  transfer-chain-rules.md
docs/scripts/: README.md  start-mcp-chrome.sh
docs/skills/: SKILL.md
docs/specs/: checklist.md  chrome-mcp.md  performance.md  smoke-test.md
docs/testcases/: 2025-12-31_DeFi-Borrow首页测试.md  2026-01-04_Hyperliquid-ApproveAgent推荐绑定Checkbox.md  2026-01-05_Wallet-Stellar (XLM) 新链测试.md  2026-01-06_Wallet-Stellar (XLM)-硬件钱包测试.md  2026-01-06_Wallet-Stellar (XLM)-软件钱包测试.md  2026-01-08_Swap-Pro-Mode测试.md  README.md
e2e/: README.md  package.json  playwright.config.ts  tsconfig.json
e2e/playwright-report/: index.html
e2e/reporters/: chinese-reporter.js  chinese-reporter.ts
e2e/tests/: market-watchlist.spec.ts
html-test/: Mnemonic OCR.html
mobile-test/: ARCHITECTURE_GUIDE.md  MULTI_DEVICE_USAGE.md  POM_RULES.md  README.md  RECORDING_RESEARCH.md  RECORDING_USAGE.md  package.json
mobile-test/config/: setup.js
mobile-test/const/: index.js  xmlPageElements.js
mobile-test/dataset/: addressBook.js  bip39_mnemonic.js  domain.js  index.js  publickey.js  watchaddress.js
mobile-test/docs/: E2E_FLOW_RULES.md  ELEMENT_LOCATOR_STRATEGY.md  页面元素获取方法汇总.md
mobile-test/helpers/: addressBookHelper.js  utilHelper.js
mobile-test/pages/: base.js  homePage.js  index.js  scanPage.js
mobile-test/pagesRules/: PAGE_RULES_GUIDE.md  README.md  app.js  bottomNavBarPage.js  devPage.js  generatePageRules.js  homePage.js  index.js  morePage.js  scanPage.js  setPasswordPage.js  swapPage.js  swapProPage.js
mobile-test/popup/: addressBookAlarm.popup.js  confirmPassword.popup.js  copyAddressChoosePath.popup.js  importBTCPublickeyChooseXpubPath.popup.js  index.js  inputPasscode.popup.js  languageSelect.popup.js  redeem.popup.js  setPassword.popup.js  signupLogin.popup.js
mobile-test/scripts/: build-bip39-from-csv.js  rename-xmls.sh
mobile-test/test/: recordManualClicks.e2e.js  recordMultiplePages.e2e.js
mobile-test/util/: dateUtils.js  index.js
scenarios/: cosmos-transfer.feature
scripts/: build-locator-map.mjs  cdp-connect.mjs  clean.mjs  explore-perps-web.mjs  extend-locators-from-index.mjs  lookup-knowledge.mjs  lookup-rules.mjs  setup-mcp.sh  start-chrome-debug.sh  step-helper.mjs  sync-app-monorepo-selectors.mjs  yaml-to-test.mjs
scripts/archive/: debug-amount.mjs  debug-click-vault.mjs  debug-close.mjs  debug-contacts.mjs  debug-sendform.mjs  debug-state.mjs  run-cosmos-tests.mjs
shared/: checklists.json  diagnosis.json  knowledge.json  mailbox.json  mem_cells.json  mem_scenes.json  preconditions.json  profile.json  tasks.json  test_cases.json  ui-map.json  ui-semantic-map.json
shared/locators/: address-book.json  browser.json  defi.json  discover.json  discovery.json  global.json  hardware.json  market.json  network-selector.json  onboarding.json  perps.json  prime.json  referral.json  security.json  settings.json  swap.json  wallet.json
shared/recordings/: 2026-02-13T19-10-26-405Z.json  2026-02-13T19-12-04-932Z.json  2026-02-13T19-12-23-364Z.json  2026-02-13T19-13-05-580Z.json  2026-02-28T08-04-00-917Z.json  2026-02-28T08-06-20-900Z.json  2026-02-28T08-19-52-698Z.json  create-wallet-confirmed.json  create-wallet-flow.json  live-2026-03-05T16-53-32-652Z.json
shared/reports/: 2026-07-23_pro2固件中文翻译走查.md  defi-morpho-pangolins-usdc-recording-2026-06-11.md  defi-stakefish-recording-2026-06-11.md  desktop-transfer-amount-details-2026-06-10.md  market-chart-parity-automation-plan-2026-07-16.md  onekey-desktop-tf-checklist-nightly-2026-06-12.md  onekey-desktop-tf-checklist-nightly-2026-06-17-rerun.md  onekey-desktop-tf-checklist-nightly-2026-06-17.md  onekey-desktop-tf-checklist-nightly-2026-06-18.md  onekey-desktop-tf-checklist-nightly-2026-06-23.md  onekey-desktop-tf-checklist-nightly-2026-07-02.md  onekey-desktop-tf-checklist-nightly-2026-07-03.md  review-2026-04-03-103034.md  review-2026-04-03-104037.md  review-2026-04-11-180000.md  review-2026-04-22-170956.md  review-2026-04-22-171720.md  review-2026-04-27-111751.md  review-2026-04-27-113822.md  review-2026-05-08-210103.md  review-2026-05-08-210623.md  review-2026-05-08-210819.md  review-2026-05-14-190959.md  review-2026-05-14-200406.md  review-2026-05-20-180500.md  review-2026-05-22-174640.md  (+29 more)
simulators/: README.md  pro2-sim-bootstrap.sh
simulators/pro2-sim/: CMakeLists.txt  README.md  lv_conf.h  tx.sh
simulators/pro2-sim/docs/plans/: 2026-06-12-firmware-pro2-simulator.md
simulators/pro2-sim/docs/specs/: 2026-06-12-firmware-pro2-simulator-design.md
simulators/pro2-sim/resroot/resource/: animations  font  graphics  hero_icons  i18n  icons  illustrations  network_icons  nft  others  token_icons  wallpapers
simulators/pro2-sim/resroot/resource/font/: noto  symbol_manifest.json
simulators/pro2-sim/src/: demo_catalog.c  demo_catalog.h  main.c  page_registry.c  page_registry.h  sim_demo_args.c  sim_demo_args.h  sim_stubs.c  sim_stubs_pages.c  snapshot.c  snapshot.h  token_registry.inc
simulators/pro2-sim/tools/: gen_fonts.sh  gen_page_list.py  gen_placeholder_images.py
simulators/pro2-sim/tools/sim_shims/: FreeRTOS.h  task.h
simulators/pro2-sim/tools/sim_shims/latest/: messages_device_control.pb.h
simulators/pro2-sim/tools/sim_shims/legacy/: messages_uiview.pb.h
(+701 files in other folders)
